--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "i": "^0.3.6",
+    "npm": "^7.21.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-img-carousel": "^2.1.1",
     "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
