--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "storefront",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
   "main": "index.js",
+  "homepage": "/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
@@ -24,6 +25,7 @@
     "npm": "^7.21.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-img-carousel": "^2.1.1",
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.21",
